force-app/main/default/objects/Mat_Servicios_de_oportunidad__c/Mat_Servicios_de_oportunidad__c.object-meta.xml
<CustomObject>
    <label>Servicios de oportunidad</label>
    <nameField>
        <label>Servicios de oportunidad Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servicios de oportunidad</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>