force-app/main/default/objects/Mat_Servicios_de_oportunidad__c/fields/Mat_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Mat_Descuento__c</fullName>
    <label>Descuento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>