force-app/main/default/objects/Mat_Servicios_de_oportunidad__c/fields/Mat_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Mat_Oportunidad__c</fullName>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Servicios de oportunidades</relationshipLabel>
    <relationshipName>Servicios_de_oportunidades</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>