force-app/main/default/objects/Mat_Servicios_de_oportunidad__c/fields/Mat_Servicio_de_talento__c.field-meta.xml
<CustomField>
    <fullName>Mat_Servicio_de_talento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicio de talento</label>
    <referenceTo>Mat_Servicio_de_talento__c</referenceTo>
    <relationshipLabel>Servicios de oportunidades</relationshipLabel>
    <relationshipName>Servicios_de_oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>