force-app/main/default/objects/Mat_Servicios_de_oportunidad__c/fields/Mat_Tarifa__c.field-meta.xml
<CustomField>
    <fullName>Mat_Tarifa__c</fullName>
    <label>Tarifa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>