force-app/main/default/objects/Mat_Servicios_de_oportunidad__c/fields/Mat_Tarifa_negociada__c.field-meta.xml
<CustomField>
    <fullName>Mat_Tarifa_negociada__c</fullName>
    <formula>Mat_Tarifa__c - ( Mat_Tarifa__c*Mat_Descuento__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tarifa negociada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>