force-app/main/default/objects/Mat_Servicios_de_oportunidad__c/validationRules/Valida_Talento_de_Servicio.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Talento_de_Servicio</fullName>
    <active>true</active>
    <errorConditionFormula>Mat_Servicio_de_talento__r.Mat_Talento__r.Id  &lt;&gt;  Mat_Oportunidad__r.Mat_Talento__r.Id</errorConditionFormula>
    <errorMessage>El servicio seleccionado debe pertenecer al mismo talento asignado en la Oportunidad.</errorMessage>
</ValidationRule>